fixed spacing on project feature page

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -847,6 +847,7 @@ hr {
 
     @include lg {
       width: 50%;
+      margin-right: 2rem;
     }
   }
 
